* 2007-09-05 - dennis.sieben@open-xchange.com

  - Bugfix ID#9254 showruntimestats gives NullPointerException
  
* 2007-08-31 - choeger@open-xchange.com

  - Bugfix ID#9156 Malformed path to HTMLEntities.properties

* 2007-08-22 - dennis.sieben@open-xchange.com

  - Bugfix ID#9023 createcontext name should be added to lmappings
  - Bugfix ID#9047 createuser not needed parameter --name
  - Bugfix ID#9046 createuser text for --extendedoptions printed on sterr
  - Bugfix ID#9034 createcontext null printed instead of cid in case of error
  - Bugfix ID#8735 Some code clean open-xchange-admin
  
* 2007-08-21 - choeger@open-xchange.com

  - Bugfix ID#8995 oxinstaller return value is always 0
    ox_set_property now checks whether propfile exists

* 2007-08-21 - dennis.sieben@open-xchange.com

  - Bugfix ID#8998 --nonl not consistent
  - Bugfix ID#8985 createuser doesn't check --timezone format
 
* 2007-08-20 - manuel.kraft@open-xchange.com

 - Bugfix ID#8875 No email validation for /opt/open-xchange/sbin/createcontext

* 2007-08-16 - dennis.sieben@open-xchange.com

 - Bugfix ID#8830 if user is deleted and plugin error occures, no message is shown.
 
* 2007-08-16 - manuel.kraft@open-xchange.com

 - Bugfix ID#8839 "Virtual" PIM folders are not updated when changing users displayname

* 2007-08-16 - choeger@open-xchange.com

  - Bugfix ID#8895 Misleading server response if "listuser --csv" doesn't find any match

* 2007-08-14 - dennis.sieben@open-xchange.com

  - Bugfix ID#8802 no error message when display_name is changed
  - Bugfix ID#8837 'createuser' command line tool shows wrong default settings for modularization
  
* 2007-08-07 - dennis.sieben@open-xchange.com

  - Bugfix ID#8593 Operations by name not possible
  - Bugfix ID#8571 Problems with multiple unique displaynames for internal users
  - Bugfix ID#8703 listcontext has incorrect data-mapping

* 2007-08-07 - choeger@open-xchange.com

 - Bugfix ID#8679 new admin does not work with log4j
   